.k8s/uw-api-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: uw-api-web
  labels:
    run: uw-api-web
spec:
  containers:
  - image: gcr.io/unicode-wiki/uw-api:0.0.1
    name: uw-api-web
    ports:
    - containerPort: 3001
      protocol: TCP
