.k8s/uw-app-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: uw-app-web
  labels:
    run: uw-app-web
spec:
  containers:
  - image: gcr.io/unicode-wiki/uw-app:${TAG_NAME}
    name: uw-app-web
    ports:
    - containerPort: 3000
      protocol: TCP
