.k8s/uw-app-web-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    run: uw-app-web
  name: uw-app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      run: uw-app-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: uw-app-web
    spec:
      containers:
      - image: gcr.io/unicode-wiki/uw-app:0.0.0.1.2
        imagePullPolicy: IfNotPresent
        name: uw-app-web
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  labels:
    run: uw-api-web
  name: uw-api-web
spec:
  # clusterIP: 10.35.245.6
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    run: uw-api-web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
